--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vy Food</title>
-    <link href='./assets/img/favicon.png' rel='icon' type='image/x-icon' />
+    <title>Tép Kiểng GK</title>
+    <link href='./assets/img/logotrenweb.jpg' rel='icon' type='image/x-icon' />
     <link rel="stylesheet" href="./assets/css/main.css">
     <link rel="stylesheet" href="./assets/css/home-responsive.css">
     <link rel="stylesheet" href="./assets/css/toast-message.css">
     <link rel="stylesheet" href="./assets/font/font-awesome-pro-v6-6.2.0/css/all.min.css"/>
+
 </head>
 <body>
     <header>
@@ -31,12 +32,15 @@
                 </div>
             </div>
         </div>
+
         <div class="header-middle">
+            <img src="/assets/img/products/bannerchinh.jpg" width="1300" height="100">
             <div class="container">
+               
                 <div class="header-middle-left">
                     <div class="header-logo">
                         <a href="">
-                            <img src="./assets/img/vy-food.png" alt="" class="header-logo-img">
+                            <img src="./assets/img/logodacat.jpg" alt="" class="header-logo-img" width="40" height="20">
                         </a>
                     </div>
                 </div>
