--- a/admin.html
+++ b/admin.html
@@ -23,8 +23,8 @@
     <div class="container">
         <aside class="sidebar open">
             <div class="top-sidebar">
-                <a href="#" class="channel-logo"><img src="./assets/img/favicon.png" alt="Channel Logo"></a>
-                <div class="hidden-sidebar your-channel"><img src="assets/img/admin/vy-food-title.png"
+                <a href="#" class="channel-logo"><img src="file:///E:/Project%20Lam%20Lai/Web%202/Webbanhang/assets/img/logodacat.jpg" alt="Channel Logo"></a>
+                <div class="hidden-sidebar your-channel"><img src="file:///E:/Project%20Lam%20Lai/Web%202/Webbanhang/assets/img/bannerchinh.jpg"
                         style="height: 30px;" alt="">
                 </div>
             </div>
@@ -132,9 +132,9 @@
                     <div class="admin-control-left">
                         <select name="the-loai" id="the-loai" onchange="showProduct()">
                             <option>Tất cả</option>
-                            <option>Món chay</option>
-                            <option>Món mặn</option>
-                            <option>Món lẩu</option>
+                            <option>Tép màu</option>
+                            <option>Tép Sulaweshi</option>
+                            <option>Cá nuôi với Tép</option>
                             <option>Món ăn vặt</option>
                             <option>Món tráng miệng</option>
                             <option>Nước uống</option>
@@ -259,9 +259,9 @@
                     <div class="admin-control-left">
                         <select name="the-loai-tk" id="the-loai-tk" onchange="thongKe()">
                             <option>Tất cả</option>
-                            <option>Món chay</option>
-                            <option>Món mặn</option>
-                            <option>Món lẩu</option>
+                            <option>Tép Màu</option>
+                            <option>Tép Sulaweshi</option>
+                            <option>Cá nuôi với tép</option>
                             <option>Món ăn vặt</option>
                             <option>Món tráng miệng</option>
                             <option>Nước uống</option>
@@ -361,9 +361,9 @@
                         <div class="form-group">
                             <label for="category" class="form-label">Chọn món</label>
                             <select name="category" id="chon-mon">
-                                <option>Món chay</option>
-                                <option>Món mặn</option>
-                                <option>Món lẩu</option>
+                                <option>Tép Màu</option>
+                                <option>Tép Sulaweshi</option>
+                                <option>Cá nuôi với tép</option>
                                 <option>Món ăn vặt</option>
                                 <option>Món tráng miệng</option>
                                 <option>Nước uống</option>
