--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
     <div class="video-container">
         <iframe width="850" height="340" src="https://www.youtube.com/embed/2VK3TtFDIjo" frameborder="1" allowfullscreen></iframe>
        <div class="background-image" >
-           <a href=""><img onerror="this.src='thumbs/120x100x2/assets/images/noimage.png';" src="file:///E:/Project%20Lam%20Lai/Web%202/Webbanhang/assets/img/Bannerthongtin.jpg" style="width: 708px; height: 340px;"/></a>
+           <a href=""><img src="file:///E:/Project%20Lam%20Lai/Web%202/Webbanhang/assets/img/Bannerthongtin.jpg" style="width: 708px; height: 340px;"/></a>
        </div>
    </div>
     <footer class="footer">
